--- a/style2.css
+++ b/style2.css
@@ -31,8 +31,8 @@
 }
 
 .card:active {
-    transform: scale(0.97);
-    transition: transform .2s;
+    /* transform: scale(0.97); */
+    /* transition: transform .2s; */
 }
 
 
@@ -44,26 +44,23 @@
     text-align: center;
     border: 2px solid blue;
     font-size: 500%;
-    /* position: relative; */
-    /* backface-visibility: hidden; */
+    border-radius: 4px;
+    padding-bottom: 7px;
+    backface-visibility: hidden;
 }
 
 .emoji {
-    border-radius: 4px;
-    padding-bottom: 7px;
+    
     background-color: rgb(213, 179, 223);
     cursor: none;
-    backface-visibility: hidden;
-
     display: none;
     transform: rotateY(180deg);
 } 
 
 .back-card {
+    padding-bottom: 7px;
     background-color: rgb(83, 18, 18);
     cursor: grab;
-    backface-visibility: hidden;
-    
 }
 
 /**--------------*/
@@ -76,3 +73,16 @@
 .back-card-displayed {
     display: none;
 }
+
+.back-card-shown {
+    display: block;
+}
+
+.disabled {
+    pointer-events: none;
+} 
+
+/* 
+.disabled > .emoji-displayed {
+    border: 5px solid rgb(12, 153, 118);
+} */
